# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "asimov-account-cli"
version = "25.0.0-dev.0"
authors = ["ASIMOV Protocol <support@asimov.so>"]
edition = "2021"
rust-version = "1.85"
description = "ASIMOV Account Command-Line Interface (CLI)"
#documentation = ""
readme = true
homepage = "https://cli.asimov.so"
repository = "https://github.com/asimov-platform/asimov-account-cli"
license = "Unlicense"
keywords = ["asimov", "ai", "cli"]
categories = ["text-processing"]
publish = true

[features]
default = ["all"]
all = []
unstable = ["all"]

[build-dependencies]
cfg_aliases = "0.2"
shadow-rs = { version = "1.0", features = [
    "build",
    "tzdb",
], default-features = false }
cc = "1.1"

[dev-dependencies]
indoc = "2.0"
temp-dir = "0.1"

[dependencies]
asimov-env = "25.0.0-dev.0"
clap = { version = "4.5", default-features = false }
clientele = "=0.3.7"
color-print = { version = "=0.3.7", default-features = false }
near-api = { version = "0.5.0", default-features = false, features = ["keystore"] }
tokio = { version = "1", features = ["full"] }
crunchy = "=0.2.4"
keyring = "3.6.2"
near-cli-rs = { version = "0.19.0", default-features = false }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc", "std"] }
serde = { version = "1.0.219", default-features = false, features = ["alloc", "std"] }
near-crypto = { version = "0.30.3", default-features = false }
dirs = "6.0.0"

[[bin]]
name = "asimov-account"
path = "src/main.rs"

[profile.release]
opt-level = 3
strip = "symbols"
#debug = true
